WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114856
[BlackBerry] EditorClientBlackBerry: Fix parameter name
https://bugs.webkit.org/show_bug.cgi?id=114856
Summary
[BlackBerry] EditorClientBlackBerry: Fix parameter name
Alberto Garcia
Reported
2013-04-19 00:11:05 PDT
EditorClientBlackBerry doesn't compile because of a misnamed parameter: testCheckingRequest.
Attachments
Patch
(1.54 KB, patch)
2013-04-19 00:12 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-04-19 00:12:43 PDT
Created
attachment 198818
[details]
Patch
WebKit Commit Bot
Comment 2
2013-04-19 02:57:59 PDT
Comment on
attachment 198818
[details]
Patch Clearing flags on attachment: 198818 Committed
r148736
: <
http://trac.webkit.org/changeset/148736
>
WebKit Commit Bot
Comment 3
2013-04-19 02:58:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug