[BlackBerry] EditorClientBlackBerry: Fix parameter name https://bugs.webkit.org/show_bug.cgi?id=114856

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-04-19
Reviewed by Carlos Garcia Campos.

Build fix due to a typo in a parameter name.

* WebCoreSupport/EditorClientBlackBerry.cpp:
(WebCore::EditorClientBlackBerry::requestCheckingOfString):

Canonical link: https://commits.webkit.org/133252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148736 268f45cc-cd09-0410-ab3c-d52691b4dbfc